style: 优化暗黑模式选择器样式，修改logo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="http://download.moujiang.com/logo.png">
+    <link rel="icon" href="https://file.moujiang.com/%E7%B4%A0%E6%9D%90/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>谋将 - 广告联盟平台</title>
   </head>
